--- a/MSV/MSV.vcxproj
+++ b/MSV/MSV.vcxproj
@@ -43,6 +43,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ExecutablePath>$(ExecutablePath)</ExecutablePath>
+    <IncludePath>C:\LLVM\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\LLVM\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -76,6 +78,210 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalDependencies>LLVMLineEditor.lib
+
+;LLVMLTO.lib
+
+;LLVMInterpreter.lib;
+
+LLVMBitWriter.lib;
+
+LLVMMCJIT.lib
+
+;LLVMIRReader.lib
+
+;LLVMInstrumentation.lib;
+
+LLVMObjCARCOpts.lib;
+
+LLVMPasses.lib;
+
+LLVMCore.lib
+;LLVMScalarOpts.lib;
+
+LLVMR600CodeGen.lib;
+
+LLVMSelectionDAG.lib;
+
+LLVMSparcDesc.lib;
+
+LLVMSparcCodeGen.lib
+
+;LLVMSparcDisassembler.lib
+;LLVMSparcAsmPrinter.lib;
+
+LLVMSparcAsmParser.lib;
+
+LLVMPowerPCCodeGen.lib;
+
+LLVMCodeGen.lib;
+
+LLVMR600Desc.lib;
+
+LLVMR600Info.lib;
+
+LLVMMipsDesc.lib;
+
+LLVMR600AsmPrinter.lib;
+
+LLVMR600AsmParser.lib;
+
+LLVMMipsCodeGen.lib
+
+;LLVMPowerPCInfo.lib
+
+;LLVMNVPTXCodeGen.lib;
+
+LLVMPowerPCDesc.lib
+
+;LLVMPowerPCDisassembler.lib
+
+;LLVMPowerPCAsmPrinter.lib;
+
+LLVMPowerPCAsmParser.lib;
+
+LLVMNVPTXInfo.lib;
+
+LLVMNVPTXDesc.lib;
+
+LLVMMSP430CodeGen.lib;
+
+LLVMNVPTXAsmPrinter.lib;
+
+LLVMMipsInfo.lib
+
+;LLVMMipsAsmParser.lib;
+
+LLVMMSP430Desc.lib
+
+;LLVMMSP430Info.lib;
+
+LLVMMipsAsmPrinter.lib
+
+;LLVMInstCombine.lib;
+
+LLVMHexagonCodeGen.lib;
+
+LLVMHexagonDisassembler.lib;
+
+LLVMAnalysis.lib;
+
+LLVMMSP430AsmPrinter.lib;
+
+LLVMHexagonInfo.lib;
+
+LLVMARMCodeGen.lib
+
+;LLVMHexagonDesc.lib;
+
+LLVMCppBackendInfo.lib
+
+;LLVMAsmPrinter.lib;
+
+LLVMCppBackendCodeGen.lib
+
+;LLVMBitReader.lib;
+
+LLVMARMDesc.lib
+
+;LLVMARMDisassembler.lib
+
+;LLVMARMInfo.lib;
+
+LLVMAArch64CodeGen.lib;
+
+LLVMARMAsmParser.lib;
+
+LLVMARMAsmPrinter.lib;
+
+LLVMAArch64Utils.lib;
+
+LLVMAArch64Info.lib;
+
+LLVMAArch64Disassembler.lib;
+
+LLVMAArch64Desc.lib;
+
+LLVMAArch64AsmPrinter.lib;
+
+LLVMAArch64AsmParser.lib
+
+;LLVMXCoreCodeGen.lib
+
+;LLVMipo.lib
+;LLVMTransformUtils.lib
+
+;LLVMipa.lib;
+LLVMX86CodeGen.lib;
+
+LLVMX86Info.lib;
+LLVMXCoreInfo.lib;
+
+LLVMXCoreDisassembler.lib;
+
+LLVMMipsDisassembler.lib
+
+;LLVMXCoreDesc.lib;
+
+LLVMXCoreAsmPrinter.lib;
+
+LLVMX86Utils.lib;
+
+LLVMX86AsmParser.lib;
+
+LLVMX86Desc.lib;
+
+LLVMTarget.lib
+
+;LLVMX86Disassembler.lib
+
+;LLVMVectorize.lib;
+
+LLVMX86AsmPrinter.lib
+
+;LLVMSystemZInfo.lib
+
+;LLVMSystemZCodeGen.lib
+
+;LLVMSystemZDesc.lib;
+
+LLVMSystemZDisassembler.lib;
+
+LLVMSystemZAsmParser.lib;
+
+LLVMSystemZAsmPrinter.lib;
+
+LLVMSparcInfo.lib;
+
+LLVMDebugInfoDWARF.lib;
+
+LLVMAsmParser.lib
+
+;LLVMDebugInfoPDB.lib;
+
+LLVMExecutionEngine.lib;
+
+LLVMLinker.lib;
+
+LLVMOrcJIT.lib;
+
+LLVMRuntimeDyld.lib
+
+;LLVMObject.lib;
+
+LLVMProfileData.lib
+
+;LLVMMC.lib;
+
+LLVMMCParser.lib;
+
+LLVMOption.lib;
+
+LLVMSupport.lib;
+
+LLVMMCDisassembler.lib
+
+;LLVMTableGen.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PreBuildEvent>
       <Command>
