--- a/MSV/MSV.vcxproj.filters
+++ b/MSV/MSV.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="lex.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="IR.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MSVCompiler.h">
@@ -69,6 +72,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="parse.cpp.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="IR.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
