2015-4-9王猛第一次修改

--- a/MSV/MSV.vcxproj
+++ b/MSV/MSV.vcxproj
@@ -288,9 +288,9 @@ LLVMMCDisassembler.lib
       </Command>
     </PreBuildEvent>
     <CustomBuildStep>
-      <Command>$(ProjectDir)bison -d MSV.y 
-$(ProjectDir)flex MSV.l</Command>
-      <Outputs>parse.h;parse.cpp;lex.cpp;%(Outputs)</Outputs>
+      <Command>
+      </Command>
+      <Outputs>%(Outputs)</Outputs>
       <Inputs>%(Inputs)</Inputs>
     </CustomBuildStep>
   </ItemDefinitionGroup>
