2015/4/21戴春春修改

--- a/MSV/MSV.vcxproj.filters
+++ b/MSV/MSV.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="IR.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="IRStruct.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MSVCompiler.h">
@@ -75,6 +78,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="IR.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="IRStruct.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
